--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -59,7 +59,7 @@
           <td>{{data["title"]}}</td>
           <td>{{data["gene"]}}</td>
           <td>{{data["disease"]}}</td>
-          <td>{{data["Tissue"]}}</td>
+          <td>{{data["tissue"]}}</td>
         </tr>
         {% endfor%} 
 
@@ -71,6 +71,6 @@
   $(document).ready(function(){
       $('#myTable').DataTable();
       });
-    </script>
+</script>
 
-    {% endblock %}
+{% endblock %}
