--- a/rnaseqmetadb/templates/datasets.html
+++ b/rnaseqmetadb/templates/datasets.html
@@ -8,7 +8,7 @@ This page will not be in menu.
 -->
 <div class="col-sm-12">
   <div class="table-responsive">
-    <table class="table">
+    <table class="table dataset">
       <tr>
         <td>ArrayExpress</td>
         <td><a target=_blank href="{{'http://www.ebi.ac.uk/arrayexpress/experiments/'+dataRow["ArrayExpress"]}}">{{dataRow["ArrayExpress"]}}</a></td>
