--- a/rnaseqmetadb/templates/layout.html
+++ b/rnaseqmetadb/templates/layout.html
@@ -1,7 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     {% block head %}
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Developer" content="Designed and developed by Md Abu Obaida, email. tareqbuet@gmail.com">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -10,9 +14,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+	
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <title>{% block title %}{% endblock %}RNASeqMetaDB</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Developer" content="Designed and developed by Md Abu Obaida, email. tareqbuet@gmail.com">
+
     <link rel="profile" href="http://gmpg.org/xfn/11">
     {% endblock %}
   </head>
@@ -87,19 +97,24 @@
       </div>
 
       <div class="container white-bg">
-
-        <div class="row">
-          <div class = 'flash'>
+	  <div class='row'>
+	  <div class="col-sm-12">
+	           
             {% with messages = get_flashed_messages() %}
             {% if messages %}
-            <ul>
+             <div class = 'flash alert alert-danger'>
               {% for message in messages %}
-              <li> <strong> {{ message }} </strong> </li>
+              <p class="text-center"> {{ message }} </p>
               {% endfor %}
-            </ul>
+            </div>
             {% endif %}
             {% endwith %}
-          </div>
+          
+	  </div>
+	  </div>
+
+        <div class="row">
+
           {% block content %}{% endblock %}
           {% block footer %}
         </div><!-- close .row -->
