--- a/rnaseqmetadb/templates/email.html
+++ b/rnaseqmetadb/templates/email.html
@@ -1,10 +1,10 @@
 <html> 
   <head></head> 
   <body> 
-    <h1>Hi!, {{newUser.name}}</h1>
+    <h1>Hi!, {{name}}</h1>
     <p>Please visit the following link to verify your email: <br>
-      <a href="{{'http://localhost:5000/verify/?email='+newUser.email+'&randomcode='+newUser.randomcode}}">
-        localhost:5000/verify/?email={{newUser.email}}&randomcode={{newUser.randomcode}}</a>
+      <a href="{{'http://localhost:5000/verify/?email='+email+'&randomcode='+randomcode}}">
+        localhost:5000/verify/?email={{email}}&randomcode={{randomcode}}</a>
     </p> 
   </body> 
 </html> 
