--- a/rnaseqmetadb/templates/statistics.html
+++ b/rnaseqmetadb/templates/statistics.html
@@ -8,7 +8,7 @@
   <div class="col-sm-3 sidebar">
     <!-- Nav tabs -->
     <ul class="nav nav-stacked" role="tablist">
-      <li role="presentation" class="active"><a href="#chart_div" aria-controls="chart_div" role="tab" data-toggle="tab">Publications by Geographic Location</a></li>
+      <li role="presentation" class="active"><a href="#chart_div" aria-controls="chart_div" role="tab" data-toggle="tab">Data sets by Geographic Location</a></li>
       <li role="presentation"><a href="#chart_div2" aria-controls="chart_div2" role="tab" data-toggle="tab">Publications by Journal</a></li>
       <li role="presentation"><a href="#chart_div3" aria-controls="chart_div3" role="tab" data-toggle="tab">Publications by Year</a></li>
 <!--      <li role="presentation"><a href="#chart_div3" aria-controls="chart_div3" role="tab" data-toggle="tab">Publications by Research Area</a></li> -->
@@ -57,7 +57,7 @@ function drawChart() {
 //  var options_researchArea = {'title':'Publications by Reasearch Area',
 //    'width':600,
 //    'height':400};
-  var options_geo = {'title':'Publications by Geographic Location',
+  var options_geo = {'title':'Data sets by Geographic Location',
     'width':600,
     'height':400};
 
