--- a/rnaseqmetadb/templates/404.html
+++ b/rnaseqmetadb/templates/404.html
@@ -3,7 +3,7 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-<div class="col-sm-8 col-sm-offset-2 text-center" style="min-height:60vh">
+<div class="col-sm-12 text-center" style="min-height:60vh">
 <h1>OPPS, Error 404 !</h1>
 <br/>
 </br>
