--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -4,49 +4,64 @@
 {% endblock %}
 {% block content %}
 <div class="col-md-12" style="min-height:60vh">
-  <form class="form-inline" action="">
-    <div class="row col-lg-12">
+  <form  class="form-horizontal"action="">
       <div class="form-group">
-        <label for="keyword">Key Word:</label>
+        <label for="keyword" class="col-sm-2" >Key Word:</label>
+		<div class="col-sm-8">
         <input type="text" class="form-control" name="keyword">
-      </div>
-      <button type="submit" class="btn btn-primary pull-right">Search</button>
-    </div>
-    <div class="row col-lg-12">
-        <span><strong>--AND--</strong></span>
-    </div>
-    <div class="row col-lg-12">
+		</div>
+		<div class="col-sm-2"><span><strong>--AND--</strong></span></div>
+		
+      </div>   
+       
       <div class="form-group">
-        <label for="genename">Gene Name:</label>
+        <label for="genename" class="col-sm-2">Gene Name:</label>
+		<div class="col-sm-8">
         <select class="form-control search input-sm" name="genename">
           <option></option>
           {% for genename in gene_names %}
           <option value="{{genename}}">{{genename}}</option>
           {% endfor %}
         </select>
-        <span><strong> --OR-- </strong></span>
+		</div>
+		 <div class="col-sm-2">
+		 <span><strong> --OR-- </strong></span>
+		</div>
+       
       </div>
       <div class="form-group">
-        <label for="diseasename">Disease Name:</label>
+        <label for="diseasename" class="col-sm-2">Disease Name:</label>
+		<div class="col-sm-8">
         <select class="form-control search input-sm" name="diseasename">
           <option value=""></option>
           {% for diseasename in disease_names %}
           <option value="{{diseasename}}">{{diseasename}}</option>
           {% endfor %}
         </select>
-        <span><strong> --OR-- </strong></span>
+		</div>
+		 <div class="col-sm-2">
+		<span><strong> --OR-- </strong></span>
+		</div>
+        
       </div>
       <div class="form-group ">
-        <label for="tissuetype">Tissue Type:</label>
+        <label for="tissuetype" class="col-sm-2">Tissue Type:</label>
+		<div class="col-sm-8">
         <select class="form-control search input-sm" name="tissuetype" >
           <option></option>
           {% for tissuetype in tissue_names %}
           <option value="{{tissuetype}}">{{tissuetype}}</option>
           {% endfor %}
         </select>
+		</div>
       </div>
-    </div>
+	  <div class="form-group ">
+	  <div class="col-sm-offset-2 col-sm-10">
+	   <button type="submit" class="btn btn-primary">Search</button>
+	   </div>
+	   </div>
   </form>
+  <br/>
   <hr/>
 
   <div class="table-responsive">
