--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -4,65 +4,66 @@
 {% endblock %}
 {% block content %}
 <div class="col-md-12" style="min-height:60vh">
-  <form  class="form-horizontal"action="">
-      <div class="form-group">
-        <label for="keyword" class="col-sm-2" >Key Word:</label>
-		<div class="col-sm-8">
+  <form class="form-horizontal" action="">
+    <div class="form-group">
+      <label for="keyword" class="col-sm-1" >Keyword:</label>
+      <div class="col-sm-4">
         <input type="text" class="form-control" name="keyword">
-		</div>
-		<div class="col-sm-2"><span><strong>--AND--</strong></span></div>
-		
-      </div>   
-       
-      <div class="form-group">
-        <label for="genename" class="col-sm-2">Gene Name:</label>
-		<div class="col-sm-8">
-        <select class="form-control search input-sm" name="genename">
-          <option></option>
-          {% for genename in gene_names %}
-          <option value="{{genename}}">{{genename}}</option>
-          {% endfor %}
-        </select>
-		</div>
-		 <div class="col-sm-2">
-		 <span><strong> --OR-- </strong></span>
-		</div>
-       
       </div>
-      <div class="form-group">
-        <label for="diseasename" class="col-sm-2">Disease Name:</label>
-		<div class="col-sm-8">
-        <select class="form-control search input-sm" name="diseasename">
-          <option value=""></option>
-          {% for diseasename in disease_names %}
-          <option value="{{diseasename}}">{{diseasename}}</option>
-          {% endfor %}
-        </select>
-		</div>
-		 <div class="col-sm-2">
-		<span><strong> --OR-- </strong></span>
-		</div>
-        
+    </div>   
+    <div class="form-group">
+      <div class="col-sm-12 col-sm-offset-1"><span><strong>--AND--</strong></span></div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-4">
+        <label for="genename" class="col-sm-2">Gene:</label>
+        <div class="col-sm-7">
+          <select class="form-control search input-sm" name="genename">
+            <option></option>
+            {% for genename in gene_names %}
+            <option value="{{genename}}">{{genename}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-sm-3">
+          <span><strong>-OR-</strong></span>
+        </div>
       </div>
-      <div class="form-group ">
-        <label for="tissuetype" class="col-sm-2">Tissue Type:</label>
-		<div class="col-sm-8">
-        <select class="form-control search input-sm" name="tissuetype" >
-          <option></option>
-          {% for tissuetype in tissue_names %}
-          <option value="{{tissuetype}}">{{tissuetype}}</option>
-          {% endfor %}
-        </select>
-		</div>
+
+      <div class="col-sm-4">
+        <label for="diseasename" class="col-sm-2">Disease:</label>
+        <div class="col-sm-7">
+          <select class="form-control search input-sm" name="diseasename">
+            <option value=""></option>
+            {% for diseasename in disease_names %}
+            <option value="{{diseasename}}">{{diseasename}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-sm-3">
+          <span><strong>-OR-</strong></span>
+        </div>
       </div>
-	  <div class="form-group ">
-	  <div class="col-sm-offset-2 col-sm-10">
-	   <button type="submit" class="btn btn-primary">Search</button>
-	   </div>
-	   </div>
+      <div class="col-sm-4">
+        <label for="tissuetype" class="col-sm-2">Tissue:</label>
+        <div class="col-sm-7">
+          <select class="form-control search input-sm" name="tissuetype" >
+            <option></option>
+            {% for tissuetype in tissue_names %}
+            <option value="{{tissuetype}}">{{tissuetype}}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group ">
+      <div class="col-sm-offset-1 col-sm-10">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+    </div>
   </form>
   <br/>
-  <hr/>
 
   <div class="table-responsive">
     <table id="myTable" class="display">
