help page created

--- a/rnaseqmetadb/templates/layout.html
+++ b/rnaseqmetadb/templates/layout.html
@@ -65,6 +65,7 @@
                     {% endif %}
                     <!--					<li><a href="{{url_for('publication')}}">Publications</a></li>-->
                     <li><a href="{{url_for('download')}}">Download</a></li>
+					<li><a href="{{url_for('help')}}">Help</a></li>
                     <li><a href="{{url_for('contactus')}}">Contact Us</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
