--- a/rnaseqmetadb/templates/submission.html
+++ b/rnaseqmetadb/templates/submission.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 		<div class="col-md-8 col-md-offset-3">
-		<h3 style="margin-bottom:15px">Submit Your Inquery</h2>
+		<h3 style="margin-bottom:15px">Submit Your Inquiry</h2>
 		
 		
 		</div>
