--- a/rnaseqmetadb/templates/404.html
+++ b/rnaseqmetadb/templates/404.html
@@ -3,10 +3,10 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
+
 <div class="col-sm-8 col-sm-offset-2 text-center" style="min-height:60vh">
-<h1>OPPS, Error 404 !</h1>
-<br/>
-</br>
-<h3>There is some error here, please try later.</h3>
+  <h1>We are sorry that the page or file you've requested is not available.</h1>
+  </br>
+  <h3>{{accession}} doesn't exists.</h3>
 </div>
 {% endblock%}
