--- a/rnaseqmetadb/templates/download.html
+++ b/rnaseqmetadb/templates/download.html
@@ -9,9 +9,9 @@ Add functionality to download all data in csv format -->
 	{% if login_session.get('login') is none%}
   <p>You must have an account to be able to download</p>
 	{% else %}
-	<form action="" method = "POST">
-  		<button type="submit" style="font-size:18pt" class="btn btn-primary">Click to Bulk Download</button>
-	</form>
+  <form action="" method = "POST">
+        <button type="submit" style="font-size:18pt" class="btn btn-primary">Click to Bulk Download</button>
+    </form></button></form>
 	{% endif %}
   </div>
   <div class="col-sm-4"></div>
