--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -4,43 +4,70 @@
 {% endblock %}
 {% block content %}
 <div class="col-md-12" style="min-height:60vh">
-  <form class="form-inline" action="">
+  <form class="form-horizontal" action="">
     <div class="form-group">
-      <label for="keyword">Key Word:</label>
-      <input type="text" class="form-control" name="keyword">
-	  <span><strong>--AND--</strong></span>
-    </div>
-	<div class="space"></div>
+	<div class="col-sm-4">
+      <label for="keyword" class="col-sm-3" >Keyword:</label>
+      <div class="col-sm-7">
+        <input type="text" class="form-control" name="keyword">
+      </div>
+    </div>  
+</div>	
     <div class="form-group">
-      <label for="genename">Gene Name:</label>
-      <select class="form-control search" name="genename">
-        <option></option>
-        {% for genename in gene_names %}
-        <option value="{{genename}}">{{genename}}</option>
-        {% endfor %}
-      </select>
-	  <span><strong> --OR-- </strong></span>
+	<div class="col-sm-4">
+      <div class="col-sm-9 col-sm-offset-3"><span><strong>--AND--</strong></span></div>
+	  </div>
     </div>
     <div class="form-group">
-      <label for="diseasename">Disease Name:</label>
-      <select class="form-control search" name="diseasename">
-        <option value=""></option>
-        {% for diseasename in disease_names %}
-        <option value="{{diseasename}}">{{diseasename}}</option>
-        {% endfor %}
-      </select>
-	  <span><strong> --OR-- </strong></span>
+      <div class="col-sm-4">
+        <label for="genename" class="col-sm-3">Gene:</label>
+        <div class="col-sm-7">
+          <select class="form-control search input-sm" name="genename">
+            <option></option>
+            {% for genename in gene_names %}
+            <option value="{{genename}}">{{genename}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-sm-2">
+          <span><strong>-OR-</strong></span>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <label for="diseasename" class="col-sm-3">Disease:</label>
+        <div class="col-sm-7">
+          <select class="form-control search input-sm" name="diseasename">
+            <option value=""></option>
+            {% for diseasename in disease_names %}
+            <option value="{{diseasename}}">{{diseasename}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="col-sm-2">
+          <span><strong>-OR-</strong></span>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <label for="tissuetype" class="col-sm-3">Tissue:</label>
+        <div class="col-sm-7">
+          <select class="form-control search input-sm" name="tissuetype" >
+            <option></option>
+            {% for tissuetype in tissue_names %}
+            <option value="{{tissuetype}}">{{tissuetype}}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>
     </div>
+
     <div class="form-group ">
-      <label for="tissuetype">Tissue Type:</label>
-      <select class="form-control search" name="tissuetype" >
-        <option></option>
-        {% for tissuetype in tissue_names %}
-        <option value="{{tissuetype}}">{{tissuetype}}</option>
-        {% endfor %}
-      </select>
+	<div class="col-sm-4">
+      <div class="col-sm-offset-3 col-sm-11 ">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+	  </div>
     </div>
-    <button type="submit" class="btn btn-primary">Search</button>
   </form>
   <hr/>
 
@@ -58,7 +85,7 @@
       <tbody>
         {% for data in DATAs%} 
         <tr>
-          <td><a href="{{url_for('home')+data["ID"]}}">{{data["ID"]}}</a></td>
+          <td><a href="{{url_for('home')+'experiments/'+data["ID"]}}">{{data["ID"]}}</a></td>
           <td>{{data["title"]}}</td>
           <td>{{data["gene"]}}</td>
           <td>{{data["disease"]}}</td>
@@ -74,35 +101,35 @@
   $(document).ready(function(){
       $('#myTable').DataTable();
       });
-</script>
-<script>
-$( "form" ).submit(function( event ) {
-var selectedkeyword = $("input[name='keyword']").val();
-localStorage.setItem("keyword", selectedkeyword);
-var selectedgene = $("[name='genename'] option:selected").val();
-localStorage.setItem("genename", selectedgene);
-var selecteddisease = $("[name='diseasename'] option:selected").val();
-localStorage.setItem("diseasename", selecteddisease);
-var selectedtissue = $("[name='tissuetype'] option:selected").val();
-localStorage.setItem("tissuetype", selectedtissue);
-    return;
-  });
- $(document).ready(function(){
-//select the options which were selected previously
-// Check browser support,
-if (typeof(Storage) != "undefined") {
+    </script>
+    <script>
+      $( "form" ).submit(function( event ) {
+          var selectedkeyword = $("input[name='keyword']").val();
+          localStorage.setItem("keyword", selectedkeyword);
+          var selectedgene = $("[name='genename'] option:selected").val();
+          localStorage.setItem("genename", selectedgene);
+          var selecteddisease = $("[name='diseasename'] option:selected").val();
+          localStorage.setItem("diseasename", selecteddisease);
+          var selectedtissue = $("[name='tissuetype'] option:selected").val();
+          localStorage.setItem("tissuetype", selectedtissue);
+          return;
+          });
+$(document).ready(function(){
+    //select the options which were selected previously
+    // Check browser support,
+    if (typeof(Storage) != "undefined") {
     // Store	
-	debugger;
-		$("input[name='keyword']").val(localStorage.getItem('keyword'));
-	$("[name='genename'] option[value='"+localStorage.getItem('genename')+"']").attr('selected','selected');
-	$("[name='diseasename'] option[value='"+localStorage.getItem('diseasename')+"']").attr('selected','selected');
-	$("[name='tissuetype'] option[value='"+localStorage.getItem('tissuetype')+"']").attr('selected','selected');
+    debugger;
+    $("input[name='keyword']").val(localStorage.getItem('keyword'));
+    $("[name='genename'] option[value='"+localStorage.getItem('genename')+"']").attr('selected','selected');
+    $("[name='diseasename'] option[value='"+localStorage.getItem('diseasename')+"']").attr('selected','selected');
+    $("[name='tissuetype'] option[value='"+localStorage.getItem('tissuetype')+"']").attr('selected','selected');
 
 
-} else {
-	document.write("undefined");
-}
-      });
-</script>
+    } else {
+    document.write("undefined");
+    }
+    });
+  </script>
 
-{% endblock %}
+  {% endblock %}
