--- a/rnaseqmetadb/templates/layout.html
+++ b/rnaseqmetadb/templates/layout.html
@@ -63,8 +63,9 @@
                     {% if login_session.get('ismanager') %}
                     <li><a href="{{url_for('inquiry')}}">Inquiry</a></li>  <!-- Will be visible to only administrator-->
                     {% endif %}
-					<li><a href="{{url_for('publication')}}">Publications</a></li>
+                    <!--					<li><a href="{{url_for('publication')}}">Publications</a></li>-->
                     <li><a href="{{url_for('download')}}">Download</a></li>
+					<li><a href="{{url_for('help')}}">Help</a></li>
                     <li><a href="{{url_for('contactus')}}">Contact Us</a></li>
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
