--- a/rnaseqmetadb/templates/download.html
+++ b/rnaseqmetadb/templates/download.html
@@ -11,7 +11,7 @@ Add functionality to download all data in csv format -->
 	{% else %}
   <form action="" method = "POST">
         <button type="submit" style="font-size:18pt" class="btn btn-primary">Click to Bulk Download</button>
-    </form></button></form>
+  </form>
 	{% endif %}
   </div>
   <div class="col-sm-4"></div>
