terms and conditions modal realizied

--- a/rnaseqmetadb/templates/home.html
+++ b/rnaseqmetadb/templates/home.html
@@ -119,7 +119,7 @@ $(document).ready(function(){
     // Check browser support,
     if (typeof(Storage) != "undefined") {
     // Store	
-    debugger;
+    //debugger;
     $("input[name='keyword']").val(localStorage.getItem('keyword'));
     $("[name='genename'] option[value='"+localStorage.getItem('genename')+"']").attr('selected','selected');
     $("[name='diseasename'] option[value='"+localStorage.getItem('diseasename')+"']").attr('selected','selected');
